# region-query

solution 1/: CMakeLists.txt  README.md  docker-compose.yml  docker-db.sh  schema.sql  test-docker.sh
solution 1/src/apps/: data_loader.cpp
solution 1/src/data/: DataLoader.cpp  DataLoader.h  Point.cpp  Point.h
solution 1/src/database/: DatabaseManager.cpp  DatabaseManager.h
solution 2/: CMakeLists.txt  README.md  group_query.json  simple_query.json  simple_visualizer.py  test_proper_false.json  test_proper_none.json  test_proper_true.json  test_query.json  test_query_engine.cpp  test_random_queries.cpp  test_visualization.py
solution 2/src/apps/: query_processor.cpp
solution 2/src/database/: DatabaseManager.cpp  DatabaseManager.h
solution 2/src/geometry/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
solution 2/src/query/: JsonParser.cpp  JsonParser.h  QueryEngine.cpp  QueryEngine.h  QueryResult.cpp  QueryResult.h
solution 3/: CMakeLists.txt  README.md  extended_visualizer.py  sample_and_query.json
solution 3/src/apps/: extended_query_processor.cpp
solution 3/src/operators/: AndOperator.cpp  AndOperator.h  CropOperator.cpp  CropOperator.h  OrOperator.cpp  OrOperator.h  QueryOperator.cpp  QueryOperator.h
solution 3/src/query/: ExtendedJsonParser.cpp  ExtendedJsonParser.h
